--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hyman</groupId>
-	<artifactId>mybatis-generator</artifactId>
+	<artifactId>mybatis-generator-maven-plugin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<packaging>maven-plugin</packaging>
+	
+	<properties>
+		
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -31,6 +36,22 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+			<version>3.2</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
