--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 	
-	<properties>
-		
-	</properties>
+	<name>Mybatis Generator Maven Plugin</name>
 	
 	<dependencies>
 		<dependency>
